--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 spring.application.name=order
 
 spring.data.mongodb.uri=mongodb://admin:admin123@localhost:27017/order-db?authSource=admin
+
+# Configuração do Circuit Breaker no Resilience4j
+# registerHealthIndicator
+resilience4j.circuitbreaker.instances.notify.failureRateThreshold=20
+resilience4j.circuitbreaker.instances.notify.waitDurationInOpenState=10000ms
+resilience4j.circuitbreaker.instances.notify.permittedNumberOfCallsInHalfOpenState=3
+resilience4j.circuitbreaker.instances.notify.slidingWindowSize=10
+resilience4j.circuitbreaker.instances.notify.registerHealthIndicator=true
